2009-11-25  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to bugfix #12699: Upgrade backend login to match t3skin
	* Fixed bug #12613: Wrong character encoding in cache tables breaks frontend rendering
	* Follow-up to bugfix #12728: Upgrade ExtJS skin to match t3skin (wrong refresh gif in grid)
	* Follow-up to bugfix #12735: BE-Login: show login process (Safari fixes)

2009-11-24  Francois Suter  <francois@typo3.org>

	* Fixed bug #12547: Removed wrong default binary search paths for Windows
	* Feature #12491: Reports: Allow multiple providers for each status collection

2009-11-25  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bugfix #12436: Move Suhosin part to php.ini section in the install tool
	* Fixed bug #9981: EM does not test for usage of mod.php-API and spuriously displays an error (thanks to Andreas Kundoch)

2009-11-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE manual.

2009-11-24  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #12706: OpenID redirects to wrong page and does not create a BE session (thanks to Steffen Müller)

2009-11-24  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bugfix #12699: Fixed remaining styling issues in the backend login
	* Follow-up to bugfix #12669: Headers in backend login looked strange in IE6
	* Fixed bug #12669: Fatal error: Call to a member function getSystemLanguages()
	* Fixed bug #11577: t3lib_formmail floods syslog with "Possible abuse of t3lib_formmail..." messages (thanks to Fabrizio Branca)
	* Fixed bug #12728: Upgrade ExtJS skin to match t3skin (thanks to T3UXW09 participants)
	* Fixed bug #12581: Pagetree frame shows HTTP 404 error

2009-11-24  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to bugfix #12735: BE-Login: show login process
	* Fixed bug #12735: BE-Login: show login process
	* Fixed bug #12719: Bugfix - tcemain copy/move/deleteL10nOverlayRecords is not fully versioning-aware (thanks to Tolleiv Nietsch)